# sayknow_translate

./: .gitignore  LICENSE  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.md  README.vi.md  README.zh.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
demand/: PRD_AI_번역앱.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: patch-plist.sh
src-tauri/src/: lib.rs  main.rs
src/components/: ChatPanel.tsx  GlossaryEditor.tsx  HistoryMenu.tsx  LangPicker.tsx  LoginPanel.tsx  ModelPicker.tsx  ProviderPicker.tsx  SettingsWindow.tsx  TabbedPanel.tsx  TranslatePanel.tsx
src/hooks/: useChat.ts  useDebounce.ts  useHistory.ts  useModels.ts  useOcpDaemon.ts  useProviderProbe.ts  useSettings.ts  useTheme.ts  useUsage.ts
src/i18n/: index.ts  strings.ts
src/lib/: chat-history.ts  history.ts  openrouter.ts  runtime.ts  secrets.ts  storage.ts  usage.ts
