[package]
name = "sayknow"
version = "0.1.0"
description = "SayKnow — AI translator that lives in your menu bar"
authors = ["SayKnow"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sayknow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
keyring = { version = "3", features = ["apple-native"] }
